Fix components.svg path.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <p><em>This piece of software is highly unstable and absolutely unfinished.</em></p>
 
-<p><img src="doc/components.svg" alt="sonos-cli components"></p>
+<p><img src="images/components.svg" alt="sonos-cli components"></p>
 
 <h2>
 <a name="netupnp" class="anchor" href="#netupnp"><span class="octicon octicon-link"></span></a>Net::UPnP</h2>
